--- a/README.Rmd
+++ b/README.Rmd
@@ -4,7 +4,8 @@ output: github_document
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
 
-```{r echo = FALSE}
+```{r, echo = FALSE}
+library(htmltools)
 knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>",
@@ -19,7 +20,7 @@ knitr::knit_hooks$set(imgcenter = function(before, options, envir){
   }
 })
 ```
-
+Sosos
 # lpirfs
 An R-package which estimates linear and non-linear impulse responses
 with local projections by Jordà (2005).
