--- a/README.Rmd
+++ b/README.Rmd
@@ -12,15 +12,15 @@ knitr::opts_chunk$set(
   fig.path = "man/figures/README-",
   fig.align = "center"
 )
-knitr::knit_hooks$set(imgcenter = function(before, options, envir){
-  if (before) {
-    HTML("<p align='center'>")
-  } else {
-    HTML("</p>")
-  }
-})
+# knitr::knit_hooks$set(imgcenter = function(before, options, envir){
+#   if (before) {
+#     HTML("<p align='center'>")
+#   } else {
+#     HTML("</p>")
+#   }
+#})
 ```
-Sosos
+
 # lpirfs
 An R-package which estimates linear and non-linear impulse responses
 with local projections by Jordà (2005).
