--- a/README.Rmd
+++ b/README.Rmd
@@ -4,14 +4,14 @@ output: github_document
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
 
-```{r}
+#```{r}
 #library(htmltools)
-knitr::opts_chunk$set(
-  collapse = TRUE,
-  comment = "#>",
-  fig.path = "man/figures/README-",
-  fig.align = "center"
-)
+# knitr::opts_chunk$set(
+#   collapse = TRUE,
+#   comment = "#>",
+#   fig.path = "man/figures/README-",
+#   fig.align = "center"
+#)
 # knitr::knit_hooks$set(imgcenter = function(before, options, envir){
 #   if (before) {
 #     HTML("<p align='center'>")
@@ -19,8 +19,18 @@ knitr::opts_chunk$set(
 #     HTML("</p>")
 #   }
 #})
+#```
+
+
+```{r setup, include = FALSE}
+knitr::opts_chunk$set(
+  collapse = TRUE,
+  comment = "#>",
+  fig.path = "man/figures/README-",
+  out.width = "100%"
+)
 ```
-s
+
 # lpirfs
 An R-package which estimates linear and non-linear impulse responses
 with local projections by Jordà (2005).
