- Last update Readme.Rmd

--- a/README.Rmd
+++ b/README.Rmd
@@ -16,13 +16,13 @@ knitr::opts_chunk$set(
 
 # lpirfs
 An R-package which estimates linear and non-linear impulse responses
-with local projections by Jordà (2005).
+with local projections by [Jordà (2005)](https://www.aeaweb.org/articles?id=10.1257/0002828053828518).
 
 ## Main features
 
 - Estimate linear and non-linear impulse responses with local projections
 - Functions to plot linear and non-linear impulse responses
-- Functions are partly implemented in Rcpp and RcppArmadillo to improve efficiency
+- Functions are partly implemented in *Rcpp* and *RcppArmadillo* to improve efficiency
 - High performance with parallel computation
 
 ## Installation
@@ -39,8 +39,6 @@ And the development version from [GitHub](https://github.com/):
 # install.packages("devtools")
 devtools::install_github("AdaemmerP/lpirfs")
 ```
-## Example
-
 ## Example: Linear impulse responses
 Load libraries:
 ```{r, message = FALSE }
@@ -54,7 +52,7 @@ Load libraries:
 ```
 
 Load data set from package to estimate a simple, new-Keynesian, closed-
-economy model. This data are used by Jordà (2005) in chapter IV. 
+economy model. These data are used by Jordà (2005) in chapter IV. 
 Please see the data's help file or the original paper for a detailed description. 
 ```{r, message = FALSE }
 # Load data (from package)
@@ -72,7 +70,7 @@ Make list and specify input variables to estimate linear impulse responses.
   specs$max_lags       <- NaN     # If lags_criterion is chosen, set maximum number of lags  
   specs$trend          <- 0L      # 0 = no trend, 1 = trend, 2 = trend and quadratic trend
   specs$shock_type     <- 1L      # 0 = standard deviation shock, 1 = unit shock
-  specs$confint        <- 1.67    # Width of confidence bands: 1 = 68%, 1.67 = 90%, 1.96 = 95%
+  specs$confint        <- 1.96    # Width of confidence bands: 1 = 68%, 1.67 = 90%, 1.96 = 95%
   specs$hor            <- 12L     # Length of horizon
 ```
 Estimate linear impulse responses 
@@ -80,22 +78,24 @@ Estimate linear impulse responses
   results_lin  <- lp_lin(data_set_df, specs)
 ```
 
-Build all plots with package function
+Save all plots with package function
 ```{r, message = FALSE }
 # Make plots
   linear_plots <- plot_lin_irfs(results_lin)
 ```
-Display single plots: 
-- The first plot shows the response of the first variable (GDP_gap) to a shock to the first variable in. 
-- The second plot shows the response of the second variable (Inflation) to the shock to the first variable (GDP_gap). 
-```{r, fig.height = 2, fig.width = 3, fig.align = "center", message = FALSE }
+Display single impulse responses: 
+
+- The first plot shows the response of the first variable (GDP_gap) to a shock in the first variable in. 
+- The second plot shows the response of the first variable (GDP_gap) to a shock in the second variable (Inflation). 
+```{r, fig.height = 3, fig.width = 4, fig.align = "center", message = FALSE }
   linear_plots[[1]]
   linear_plots[[2]]
 ```
 
 Display all plots:
-- This graph is similar to Figure 5 in Jordà (2005), p. 176. 
-- Figure 5 in Jordà (2005) is replicatedS when specs$confint = 1.67 (90% error bands).
+
+- This graph is similar to Figure 5 in Jordà (2005), p. 176, but has wider confidence bands. 
+- Figure 5 in Jordà (2005) is replicated when specs$confint = 1.67 (90% error bands).
 ```{r, fig.height = 6, fig.width = 8, fig.align = "center", message = FALSE }  
 # Show all plots
   library(ggpubr)
@@ -119,7 +119,7 @@ Load libraries:
 ```
 
 Load data set from package to estimate a non-linear, new-Keynesian, closed-
-economy model. This data set are used by Jordà (2005) in chapter IV.
+economy model. This data set is used by Jordà (2005) in chapter IV, p.174.
 Please see the data's help file or the original paper for a detailed description. 
 ```{r, message = FALSE }
 # Load data (from package)
@@ -145,71 +145,70 @@ Provide a switching variable to separate the data into two regimes.
 ```{r, message = FALSE }
 # Specifications for switching variable
   specs$switching      <- data_set_df$GDP_gap # The output_gap is used as input into the tranistion function
-  specs$hp_filter      <- 1               # 0 = Do not use HP-filter to decompose switching-variable, 
-                                          # 1 = Use HP-filter to decompose switching-variable
-  specs$lambda         <- 1600            # Monthly   = 129600,
-                                          # Quarterly = 1600,
-                                          # Annual    = 6.25
-  specs$gamma          <- 3               # Numeric value > 0
+  specs$hp_filter      <- 1                   # 0 = Do not use HP-filter to decompose switching-variable, 
+                                              # 1 = Use HP-filter to decompose switching-variable
+  specs$lambda         <- 1600                # Monthly = 129600, Quarterly = 1600, Annual = 6.25
+  specs$gamma          <- 3                   # Numeric value > 0
 ```
 
-The switching variable (z) is either decomposed by the Hodrick-Prescott filter (*hp_filter = 1*) or directly plugged into the follwing switching function.
+The switching variable ($z$) is either decomposed by the Hodrick-Prescott filter (*hp_filter = 1*) or directly plugged into the follwing switching function.
 
-- $F_{z_t} = \frac{exp(-\gamma z_t)}{1 + exp(-\gamma z_t)}$
-
-
-IMPORTANT: To avoid contemporaneous feedback, the index of z is set to *t − 1* (for details see 
-[Auerbach and Gorodnichenko; 2012)](https://www.aeaweb.org/articles?id=10.1257/pol.4.2.1)
-This is done automatically *create_nl_data* of the package. 
-If you do not want the switching function to be lagged, please provide the switching variable with a lead of one.
+$F_{z_t}=\frac{exp(-\gamma z_t)}{1 + exp(-\gamma z_t)}$
 
 - Data for regime 1 are calculated as: $X_{t-p}*(1-F(z_{t-1}))$
 - Data for regime 2 are calculated as: $X_{t-p}*F(z_{t-1})$
+
+
+IMPORTANT: To avoid contemporaneous feedback, the index of $z$ is set to *t − 1* (for details see 
+[Auerbach and Gorodnichenko; 2012)](https://www.aeaweb.org/articles?id=10.1257/pol.4.2.1)
+This is done automatically in the function *create_nl_data*. 
+If you do not want the switching function to be lagged, please provide the switching variable with a lead of one.
+
 
 Estimate non-linear impulse responses 
 ```{r, message = FALSE }  
   results_nl <- lp_nl(data_set_df, specs)
 ```
 
-Plot switching variable  and transition function 
+Extract values of transition function from *results_nl* and make date sequence.
 ```{r, message = FALSE } 
-  # Extract values of transition function from *results_nl*
   fz      <- results_nl$fz
-  # Make date sequence. Start with sequnce in October because the model is estimated with three lags
+
+# Start with sequence in October because the non-linear model is estimated with three lags.
   dates   <- seq(as.Date("1955/10/1"), as.Date("2003/1/1"), by = "quarter")
-  data_df <- data_frame(x = dates, fz = fz, ff = specs$switching[(specs$lags_nl+1):length(data_set_df$FF)])
-  
-  # Plot output gap rate which is used as the switching variable
+  data_df <- data_frame(x = dates, fz = fz, gdp_gap = specs$switching[(specs$lags_nl+1):length(data_set_df$FF)])
+```
+
+Plot output gap
+```{r, fig.height = 4, fig.width = 6, fig.align = "center", message = FALSE }  
   ggplot(data = data_df) +
-    geom_line(aes(x = x, y = ff)) +
+    geom_line(aes(x = x, y = gdp_gap)) +
     theme_light() +
     ylab("") +
     xlab("Date") +
     scale_x_date(date_breaks = "5 year",  date_labels = "%Y")
-  
-  # Plot transition function
+```
+
+Plot tranistion function
+```{r, fig.height = 4, fig.width = 6, fig.align = "center", message = FALSE }  
   ggplot(data = data_df) +
     geom_line(aes(x = x, y = fz)) +
     theme_light() +
     ylab("") +
     xlab("Date") +
     scale_x_date(date_breaks = "5 year",  date_labels = "%Y")
-  
- 
-    
 ```
-
-Plot 
 
 Make all plots with package function
 ```{r, message = FALSE }
     nl_plots <- plot_nl_irfs(results_nl)
 ```
-Show first irf of each state: 
 
-- The first plot shows the response of the first variable (GDP_gap) to the shock of the first variable in 'data_set_df'. 
-- The second plot shows the response of the second variable (Inflation) to the shock of the first variable (GDP_gap) in 'data_set_df'. 
-```{r, fig.height = 2, fig.width = 3, fig.align = "center", message = FALSE }
+Show first impulse response of each regime: 
+
+- The first plot shows the response of the first variable (GDP_gap) to the shock in the first variable in regime 1. 
+- The second plot shows the response of the first variable (GDP_gap) to the shock in the first in regime 2. 
+```{r, fig.height = 3, fig.width = 4, fig.align = "center", message = FALSE }
 # Load packages
   library(ggpubr)
   library(gridExtra)
@@ -222,11 +221,17 @@ Show first irf of each state:
   plot(s1_plots[[1]])
   plot(s2_plots[[1]])
 ```
+
+Show all impulse responses of regime 1
 ```{r, fig.height = 6, fig.width = 8, fig.align = "center", message = FALSE }
-# Plot plots
-  marrangeGrob(s1_plots, nrow = ncol(data_set_df), ncol = ncol(data_set_df))
-  marrangeGrob(s2_plots, nrow = ncol(data_set_df), ncol = ncol(data_set_df))
+  marrangeGrob(s1_plots, nrow = ncol(data_set_df), ncol = ncol(data_set_df), top =  NULL)
 ```
+
+Show all impulse responses of regime 2
+```{r, fig.height = 6, fig.width = 8, fig.align = "center", message = FALSE }
+  marrangeGrob(s2_plots, nrow = ncol(data_set_df), ncol = ncol(data_set_df), top = NULL)
+```
+
 
 ## References
 * Auerbach, A. J., and Gorodnichenko Y. (2012). "Measuring the Output Responses to Fiscal Policy." *American Economic Journal: Economic Policy*, 4    (2):   1-27. [doi:10.1257/pol.4.2.1](https://www.aeaweb.org/articles?id=10.1257/pol.4.2.1)
